# django-basic

./: Dockerfile.dev  LICENSE  compose.yml  pyproject.toml
app/config/: urls.py
app/config/settings/: base.py
app/core/: urls.py
app/libs/: setting_utils.py
app/libs/tests/: test_setting_utils.py
app/users/migrations/: 0001_initial.py
