[project]
name = "django-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dj-database-url>=2.3.0",
    "django-stubs-ext>=5.1.1",
    "django==5.1.4",
    "django-log-request-id>=2.1.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "django-stubs[compatible-mypy]>=5.1.1",
    "django-types>=0.20.0",
    "djlint>=1.36.4",
    "mypy>=1.13.0",
    "ruff>=0.8.4",
    "unittest-xml-reporting>=3.2.0",
]
